welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:5: error: missing parameter type for expanded function ((x$1, x$2) => Math.max(x$1, x$2))
    case (_, _) => return Math.max(_,_)
                                   ^maxMod5:5: error: missing parameter type for expanded function ((x$1: <error>, x$2) => Math.max(x$1, x$2))
    case (_, _) => return Math.max(_,_)
                                     ^